welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:12: error: not found: value getMondLargeur
  if (getX() == getMondLargeur() - 1) {
                ^ZigZag:13: error: not found: value compt
    setPos(getMondeLargeur() - 1, compt / getMondeHauteur())
                                  ^ZigZag:14: error: value getMondeLargeur is not a member of Int
    for (i <- 1 getMondeLargeur() - 1) {
                ^ZigZag:14: error: value - is not a member of Unit
    for (i <- 1 getMondeLargeur() - 1) {
                                  ^ZigZag:15: error: not found: value GetMondeLargeur
      setPos(GetMondeLargeur() - 1 - i, compt / getMondeHauteur())
             ^ZigZag:15: error: not found: value compt
      setPos(GetMondeLargeur() - 1 - i, compt / getMondeHauteur())
                                        ^ZigZag:16: error: not found: value compt
      ecritMessage(""+compt) 
                      ^ZigZag:20: error: not found: value compt
    ecritMessage(""+compt)
                    ^ZigZag:22: error: not found: value compt
      setPos(i, compt / getMondeHauteur())
                ^ZigZag:23: error: not found: value compt
      ecritMessage(""+compt)
                      ^